--- a/src/global.css
+++ b/src/global.css
@@ -26,6 +26,8 @@ html {
 
   .nextra-code-block pre {
     font-size: 16px;
+    --tw-bg-opacity: 0.03;
+    background-color: rgba(0, 0, 0, var(--tw-bg-opacity));
   }
 
   :is(html[class~=dark] body) {
