--- a/src/components/Features.module.css
+++ b/src/components/Features.module.css
@@ -1,24 +1,4 @@
 .root {
-  margin: 0 auto;
-  max-width: 1208px;
-  padding-left: max(env(safe-area-inset-left), 1.5rem);
-  padding-right: max(env(safe-area-inset-right), 1.5rem);
-  border-top: 1px solid rgb(229, 231, 235);
-
-  :global(.dark) & {
-    border-top: 1px solid rgb(31, 31, 31);
-  }
-
-  h3 {
-    text-transform: uppercase;
-    font-size: 24px;
-    letter-spacing: 0.1em;
-    font-weight: 400;
-    color: hsl(204 12% 45%);
-    white-space: nowrap;
-    text-align: center;
-    margin-bottom: 0;
-  }
 }
 
 .features {
@@ -33,7 +13,7 @@
   }
 
   @media (min-width: 960px) {
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(var(--grapp-features-columns-number), 1fr);
   }
 
   li {
@@ -45,7 +25,7 @@
     }
 
     @media (min-width: 640px) {
-      max-width: 256px;
+      max-width: 90%;
     }
 
     svg {
