--- a/src/components/Method.module.css
+++ b/src/components/Method.module.css
@@ -1,14 +1,14 @@
 .arg {
-  color: var(--shiki-token-parameter);
+  color: var(--grapp-method-argument-color);
   font-style: italic;
 }
 
 .returns {
-  color: var(--shiki-token-constant);
+  color: var(--grapp-method-return-value-color);
 }
 
 .type {
-  color: var(--shiki-token-link);
+  color: var(--grapp-method-type-color);
 }
 
 .bg {
