--- a/src/global.css
+++ b/src/global.css
@@ -1,21 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital@0;1&family=Silkscreen:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=JetBrains+Mono:ital@0;1&family=Silkscreen:wght@400;700&display=swap');
 
 html {
-  h3 {
-    font-size: 22px;
-    letter-spacing: -1px !important;
-    font-family: 'Silkscreen', sans-serif;
-    text-transform: uppercase;
-    margin: 30px 0 16px;
-    font-weight: normal !important;
-  }
-
-  h1, h2, h3, h4, h5 {
-    .subheading-anchor {
-      font-family: ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Noto Sans,Ubuntu,Cantarell,Helvetica Neue,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji;
-    }
-  }
-
   blockquote {
     font-style: normal !important;
   }
@@ -96,13 +81,36 @@ html {
   .nextra-toc li .nx-font-semibold {
     font-weight: 400;
   }
+
+  aside {
+    & > div {
+      border-top: none !important;
+    }
+  }
+
+  footer {
+    background: none !important;
+    margin: 0 auto;
+    max-width: 90rem;
+    margin-bottom: max(env(safe-area-inset-bottom), 1.5rem);
+
+    @media (max-width: 1500px) {
+      padding-right: max(env(safe-area-inset-right), 1.5rem);
+      padding-left: max(env(safe-area-inset-left), 1.5rem);
+    }
+  }
 }
 
 :root {
-  --grapp-home-preview-max-width: 848px;
-  --grapp-home-preview-top-offset: -100px;
-  --grapp-home-content-max-width: 1208px;
-  --grapp-features-columns-number: 3;
+  --grapp-hero-grid-cols: repeat(6, minmax(0, 1fr));
+  --grapp-hero-text-column-span: span 3 / span 3;
+  --grapp-hero-preview-column-span: span 3 / span 3;
+  --grapp-hero-preview-column-start: 4;
+  --grapp-features-container-grid-cols: repeat(3, minmax(0, 1fr));
+  --grapp-features-grid-cols: repeat(3, minmax(0, 1fr));
+  --grapp-features-list-column-span: span 3 / span 3;
+  --grapp-features-preview-column-span: span 1 / span 1;
+
   --grapp-property-default-value-color: var(--shiki-token-constant);
   --grapp-property-type-color: var(--shiki-token-link);
   --grapp-method-argument-color: var(--shiki-token-parameter);
