--- a/src/components/Hero.module.css
+++ b/src/components/Hero.module.css
@@ -1,52 +1,33 @@
-.root {
-  position: relative;
-}
-
 .content {
-  margin: 0 auto;
-  position: relative;
-  z-index: 2;
-  padding: 40px 0 140px;
   padding-left: max(env(safe-area-inset-left), 1.5rem);
   padding-right: max(env(safe-area-inset-right), 1.5rem);
-  max-width: 90rem;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
 }
 
-.headline {
-  margin-top: 1.5rem;
-  display: inline-flex;
+.title {
   background-image: linear-gradient(146deg, #000, #444);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-clip: text;
-  font-size: 2.8rem;
-  font-size: min(3.2rem, max(8vw, 2.6rem));
+  font-size: 3.6rem;
+  font-size: min(3.6rem, max(8vw, 2.6rem));
   font-feature-settings: initial;
   line-height: 1.05;
-  letter-spacing: -0.5rem;
-  font-family: 'Silkscreen', sans-serif;
-  font-weight: 400;
-  max-width: 60rem;
-  text-align: center;
+  font-weight: 700;
+  letter-spacing: -2.81px;
+  font-family: 'Inter';
 
   :global(.dark) & {
     background-image: linear-gradient(146deg, hsl(var(--nextra-primary-hue)var(--nextra-primary-saturation)40%/var(--tw-text-opacity)), hsl(var(--nextra-primary-hue)var(--nextra-primary-saturation)80%/var(--tw-text-opacity)));
   }
 }
 
-.subtitle {
-  margin-top: 1.25em;
+.description {
   font-size: 1.3rem;
   font-size: min(1.3rem, max(3.5vw, 1.1rem));
   font-feature-settings: initial;
   font-weight: 400;
   line-height: 1.6;
   color: hsl(204 12% 45%);
-  max-width: 60rem;
-  text-align: center;
 
   br {
     display: none;
@@ -61,31 +42,55 @@
   }
 }
 
-.actions {
-  margin-top: 1.6em;
-  margin-bottom: 1.4em;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 1.3rem;
-  font-size: min(1.3rem, max(3.5vw, 1.1rem));
-  font-weight: 500;
+.logo {
+  width: 80px;
+  height: 80px;
+}
+
+.blob {
+  position: absolute;
+  transform: translateX(-50%) translateY(-50%);
+  left: 0%;
+  top: 80%;
+  height: 140%;
+
+  fill: #F2F2F2;
+
+  :global(.dark) & {
+    fill: #161E35;
+  }
+}
+
+.preview {
+  img {
+    border-radius: 6px;
+  }
+  /* &:after { */
+  /*   content: ''; */
+  /*   display: block; */
+  /*   width: 120px; */
+  /*   height: 120px; */
+  /*   position: absolute; */
+  /*   background-image: url('../images/hero-shape.png'); */
+  /*   background-repeat: no-repeat; */
+  /*   background-size: cover; */
+  /* } */
 }
 
 .button {
   height: 56px;
-  display: flex;
+  display: inline-flex;
   align-items: center;
   justify-content: center;
   padding: 0 40px;
   font-size: 1.1rem;
   font-family: 'Silkscreen', sans-serif;
   border-radius: 4px;
-  background-color: var(--grapp-hero-button-background-color);
+  background: linear-gradient(146deg, #000, #444);
+  color: #fff;
 
   &:hover  {
-    background-image: linear-gradient(146deg, #000, #444);
-    color: #fff;
+    background-image: linear-gradient(80deg, #EE0979, #FF6A00);
 
     span {
       transform: translateX(11px) translateY(1px);
@@ -100,7 +105,7 @@
 
   :global(.dark) & {
     color: #fff;
-    background-color: var(--grapp-hero-button-background-color);
+    background: var(--grapp-hero-button-background-color);
 
     &:hover {
       background-image: linear-gradient(80deg, #EE0979, #FF6A00);
