--- a/src/components/Logo.module.css
+++ b/src/components/Logo.module.css
@@ -3,15 +3,10 @@
   align-items: center;
 }
 
-.logo {
-  display: block;
-  width: 40px;
-  height: 40px;
-}
-
 .title {
-  font-size: 16px;
-  letter-spacing: -0.6px;
-  margin-left: 12px;
-  font-family: 'Silkscreen', sans-serif;
+  font-size: 1.3rem;
+  line-height: 1.42;
+  font-weight: 700;
+  letter-spacing: -0.678px;
+  font-family: 'Inter';
 }
