--- a/src/components/SectionHeader.module.css
+++ b/src/components/SectionHeader.module.css
@@ -12,12 +12,13 @@
   font-family: 'Inter';
 
   :global(.dark) & {
-    background-image: linear-gradient(146deg, hsl(var(--nextra-primary-hue)var(--nextra-primary-saturation)99%/var(--tw-text-opacity)), hsl(var(--nextra-primary-hue)var(--nextra-primary-saturation)82%/var(--tw-text-opacity)));
+    background-image: linear-gradient(146deg, hsl(var(--nextra-primary-hue)var(--nextra-primary-saturation)90%/var(--tw-text-opacity)), hsl(var(--nextra-primary-hue)var(--nextra-primary-saturation)99%/var(--tw-text-opacity)));
   }
 }
 
 .description {
-  font-size: 1.1rem;
+  font-size: 1.2rem;
+  font-size: min(1.2rem, max(3.5vw, 1.1rem));
   font-feature-settings: initial;
   font-weight: 400;
   line-height: 1.6;
